tests/specs/node/error_stack_internal_frames/console_log.out
Error: ENOENT: no such file or directory, open '/non/existent/file'
    at readFileSync (ext:deno_node/_fs/_fs_readFile.ts:[WILDCARD])
    at [WILDCARD]console_log.ts:6:5
    at Array.processTicksAndRejections (ext:deno_node/_next_tick.ts:[WILDCARD]) {
  errno: -2,
  syscall: "open",
  code: "ENOENT",
  path: "/non/existent/file"
}
